# CG-Course

./: .gitignore  README.md
doc/: ИУ7_51Б_Постнов_С_А_РПЗ_Курсовая_Работа_КГ.docx  ТЗ.docx  Техническое задание.docx
doc/SEN/measures/: measures.csv
doc/SEN/parts/: 02-analysis.tex  03-construct.tex  04-techno.tex  05-research.tex
doc/Tex/: report.tex
doc/Tex/diagrams/: zbuf.drawio
doc/Tex/measures/: measure.py
doc/Tex/parts/: 01-introduction.tex  02-analysis.tex  03-construct.tex  04-techno.tex  06-conclusion.tex  07-appendix.tex  biblio.bib
project/: CMakeLists.txt  find_path.py
project/lib/actions/: BaseAction.cpp  BaseAction.h  CameraAction.cpp  CameraAction.h  ModelAction.cpp  ModelAction.h  ModelsAction.cpp  ModelsAction.h  SceneAction.cpp  SceneAction.h
project/lib/adapters/camera/: CameraAdapter.h  TransformCameraAdapter.cpp  TransformCameraAdapter.h
project/lib/adapters/composite/: CompositeAdapter.h  DrawCompositeAdapter.cpp  DrawCompositeAdapter.h  TransformCompositeAdapter.cpp  TransformCompositeAdapter.h
project/lib/adapters/model/: DrawCarcassModelAdapter.cpp  DrawCarcassModelAdapter.h  ModelAdapter.h  TransformCarcassModelAdapter.cpp  TransformCarcassModelAdapter.h
project/lib/drawer/: QtDrawer.cpp  QtDrawer.h  QtFactory.h
project/lib/facade/: Facade.cpp  Facade.h
project/lib/load/builders/: BaseBuilder.h
project/lib/load/builders/camera/: BaseCameraBuilder.h  CameraBuilder.cpp  CameraBuilder.h
project/lib/load/builders/model/: BaseModelBuilder.h  ModelBuilder.cpp  ModelBuilder.h
project/lib/load/builders/scene/: BaseSceneBuilder.h  SceneBuilder.cpp  SceneBuilder.h
project/lib/load/directors/camera/: FileCameraDirector.cpp  FileCameraDirector.h
project/lib/load/directors/model/: LoadModelDirector.cpp  LoadModelDirector.h
project/lib/load/directors/scene/: FileSceneDirector.cpp  FileSceneDirector.h
project/lib/load/loader/: BaseLoader.h  FileCarcassModelLoader.cpp  FileCarcassModelLoader.h
project/lib/load/mediators/: BaseLoadMediator.cpp  BaseLoadMediator.h
project/lib/load/mediators/camera/: CameraLoadMediator.cpp  CameraLoadMediator.h
project/lib/load/mediators/creators/: CameraLoadMediatorCreator.cpp  CameraLoadMediatorCreator.h  MediatorSolution.h  ModelLoadMediatorCreator.cpp  ModelLoadMediatorCreator.h  SceneLoadMediatorCreator.cpp  SceneLoadMediatorCreator.h
project/lib/load/mediators/model/: ModelLoadMediator.h  ModelLoadMeditor.cpp
project/lib/load/mediators/scene/: SceneLoadMediator.cpp  SceneLoadMediator.h
project/lib/managers/creators/: DrawManagerCreator.cpp  DrawManagerCreator.h  LoadManagerCreator.cpp  LoadManagerCreator.h  SceneManagerCreator.cpp  SceneManagerCreator.h  TransformManagerCreator.cpp  TransformManagerCreator.h
project/lib/managers/draw/: DrawManager.cpp  DrawManager.h
project/lib/managers/load/: LoadManager.cpp  LoadManager.h
project/lib/managers/scene/: SceneManager.cpp  SceneManager.h
project/lib/matrix/: BaseTransformer.h  Transformer.cpp  Transformer.h
project/lib/matrix/errors/: errors.hpp
project/lib/matrix/iterator/: MatrixIterator.h  MatrixIterator.hpp
project/lib/matrix/matrix/: BaseMatrix.cpp  BaseMatrix.hpp  Matrix.h  Matrix.hpp  matrix.h
project/lib/objects/: BaseObject.cpp  BaseObject.h  Composite.cpp  Composite.h
project/lib/objects/invisibleobject/: Camera.cpp  Camera.h
project/lib/objects/visibleobject/carcassmodel/: CarcassModel.cpp  CarcassModel.h  Edge.cpp  Edge.h  Side.cpp  Side.h  Vertex.cpp  Vertex.h
project/lib/scene/: Scene.cpp  Scene.h
project/src/: Solver.cpp  Solver.h  main.cpp  mainwindow.cpp  mainwindow.h
project/ui/: mainwindow.ui
reborn/CourseWork/: CourseWork.aps  CourseWork.sln  CourseWork.vcxproj  CourseWork.vcxproj.filters  camera.cpp  camera.hpp  glad.c  gui.hpp  loader.cpp  loader.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  obstacle.cpp  obstacle.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sphere.cpp  sphere.hpp
reborn/CourseWork/shaders/: shader.frag  shader.vert
